############################################
# Changelog of the check_nwc_health plugin #
############################################


2013-12-05 2.6.3
- output number of sessions for f5 bigip load balancer pools
- deal with obviously wrong values from devices (20000% cpu usage)
- foundry server load balancing

2013-11-08
- added support for role based login for Fritz Boxes (available since 
  FRITZ!OS 5.50). Use --community for password, --username for username if
  role based security is switched on.

2013-11-09
- bugfix for fritzbox

2013-11-08 2.6.1
- hardware-health for Checkpoint Firewall-1

2013-11-07 2.6
- finished bgp-peer-status (focus on as numbers with --name2)
- admin down with --interface-status can have any level with --mitigation

2013-10-31 2.5.4.1
- add Fujitsu Intelligent Blade Panel 30/12

2013-10-30 2.5.4
- add bgp

2013-10-01 2.5.3
- detect more brocade devices 

2013-09-26 2.5.2.1
- supress double output for html f5 pool members

2013-09-25 2.5.2
- add html output for f5 pool members

2013-09-18 2.5.1.2
- removed a leftover Data::Dumper (Thanks Frank Belau)

2013-09-17 2.5.1.1
- bugfix in lsmpi_io memory pools of Cisco ASR (100% even with --warning/--critical)

2013-09-11 2.5.1
- set a 100% threshold for lsmpi_io memory pools of Cisco ASR (Thanks James Clark & Perun)

2013-09-10 2.5
- implemented offline mode with --snmpwalk & --offline

2013-09-03 2.4
- add Cisco IronPort AsyncOS

2013-08-27 2.3
- add Juniper IVE (ex. Pulse-Gateway MAG4610)
- add count-connections for cisco asa

2013-07-11 2.2
- add memory-usage for checkpoint
- add detection for cpx

2013-07-09 2.1.1
- skip non-interface files in /sys/class/net for servertype linuxlocal (Thanks Sven Nierlein)
- better error handling on unwritable statefiles/dirs

2013-06-12 2.1
- added "--servertype ifmib" so you can use "--mode interface*" with every kind of ifmib-capable device

2013-06-01 2.0
- added support for AVM FRITZ!DECT 200 smart plug

2013-05-27 1.9.8.1