@@ -7,6 +7,7 @@
 - output number of sessions for f5 bigip load balancer pools
 - deal with obviously wrong values from devices (20000% cpu usage)
 - foundry server load balancing
+- bugfix in interface-* for Juniper IVE
 
 2013-11-08
 - added support for role based login for Fritz Boxes (available since 
